[metadata]
name = ProChopPy
version = 0.1.1
author = Florian Breit
author_email = florian@florian.me.uk
description = Segment audio recordings into separate files based on ProRec annotations.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/thatfloflo/prochoppy
project_urls =
    Bug Tracker = https://github.com/thatfloflo/prochoppy/issues
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Multimedia :: Sound/Audio :: Conversion
    Topic :: Multimedia :: Sound/Audio :: Speech
    Topic :: Scientific/Engineering
    Topic :: Utilities

[options]
packages = find:
python_requires = >=3.10
install_requires =
    colorama

[options.entry_points]
console_scripts =
    prochoppy = prochoppy